--- a/views/changeMessage.pug
+++ b/views/changeMessage.pug
@@ -5,8 +5,8 @@ block styles
 
 block content
   form(action="/change" method="post")
-    textarea(type="text" name="message" pattern="[a-z A-Z]{3,100}" placeholder="Enter your message")= message.message
-    input(type="tel" name="phone" pattern="^[0-9\-\+]{9,15}$" placeholder="Example 374-33-33-33-33" value= message.phone)
+    textarea(type="text" name="message" maxlength="100" placeholder="Enter your message")= message.message
+    input(type="tel" name="phone" maxlength="11" placeholder="Example 374-33-33-33-33" value= message.phone)
     input(type="hidden" value= message.id name="id")
     button(type="submit") Change
   button.addButton 
